--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-    "routes": [
-      {
-        "src": "/index",
-        "dest": "api/app.py"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/app.py"
+    }
+  ]
+}
