update json file

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/index",
+      "dest": "api/app.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "api/app.py"
     }
